# ptcl-neural-features

./: README.md
ptcl_dataset/: pyproject.toml
ptcl_dataset/scripts/: depth_image_to_ptcl.py  explore_dataset.py  explore_floor_height.py
ptcl_dataset/src/ptcl_dataset/: compression_dataset.py  dataset.py  fps.py  knn_encoding.py  random_sampling.py
ptcl_neural_features/: pyproject.toml
ptcl_neural_features/scripts/: find_lr.py  pruebas.py  train.py
ptcl_neural_features/src/pct_compressor/: PCT_PCC.py  compressor.py  model.py
ptcl_neural_features/src/pointcloud_transformer/: cls.py  model.py  module.py
ptcl_neural_features/src/ptcl_neural_features/: find_lr.py  networks.py  pct.py
