[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ptcl_neural_features"
version = "0.0.1"
authors = [{ name = "Lorenzo Cano", email = "lcano@unizar.es" }]
description = "Neural networks for depth image features extraction"
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["numpy", "torch"]
[tool.hatch.build]
only-packages = true
sources = ["src"]
[tool.hatch.build.targets.wheel]
only-include = ["src"]
packages = ["src/ptcl_neural_features", "src/pointcloud_transformer","src/pct_compressor"]

